fixes made in generateRandomNumbers function and UI alignment changes

--- a/home.css
+++ b/home.css
@@ -14,11 +14,11 @@ body {
 
 .container {
     margin: 50px auto;
-    padding: 20px;
+    padding: 50px;
     background-color: #273810;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
+    max-width: 600px;
 }
 
 h1{
@@ -72,6 +72,7 @@ h2 {
 button {
     padding: 10px 20px;
     margin: 10px;
+    width: 130px;
     border: none;
     background-color: #0b6552;
     color: white;
